# proj202607

./: .Rbuildignore  .env.example  .gitignore  CLAUDE.md  DESCRIPTION
dados/cnmp/: resolucao277.csv
dados/cnmp/debug_html/: 01_login.html  02_pos_login.html  03_pos_perfil.html  04_home_pos_perfil.html  05_busca_form1.html  05_entidades_form1.html  05b_lista_form1.html  form_instancia.html
dados/cnmp/formulario_de_visita_de_inspecao_semestral_estabelecimentos_/: 20260527_140717_710699.json
dados/cnmp/formulario_de_visita_semestral_a_estabelecimentos_prisionais/: 20260527_140759_587665.json
inst/relatorio/: referencias.bib  relatorio_jurimetria.qmd
inst/relatorio/_extensions/nmfs-opensci/titlepage/: _coverpage.tex  _extension.yml  _titlepage.tex  pandoc.tex
notebooks/cnmp/: 00_extract_bronze.ipynb  01_carga_silver.ipynb  02_carga_gold.ipynb
python/: pyproject.toml
python/scripts/: comparar_ambientes_cnmp.py  inspecionar_api_cnmp.py
python/src/infra/: lakehouse.py  warehouse.py
python/src/modulos/cnmp/: client.py  scraper.py
python/src/modulos/cnmp/etl/: extract_bronze.py  load_gold.py  load_silver.py  read_bronze.py  transform_silver.py
python/tests/: test_load_gold.py  test_load_silver.py  test_transform_silver.py
