[project]
name = "mp-coleta"
version = "0.1.0"
description = "Coleta automatizada de dados do sistema penal"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "pandas>=2.2",
    "pyodbc>=5.1",
    "sqlalchemy>=2.0",
    "azure-identity>=1.17",
    "azure-storage-file-datalake>=12.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
