[project]
name = "mp-coleta"
version = "0.1.0"
description = "Coleta automatizada de dados do sistema penal"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pyodbc>=5.1",
    "sqlalchemy>=2.0",
    "azure-identity>=1.17",
    "azure-storage-file-datalake>=12.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
